--- a/landing_page_2.html
+++ b/landing_page_2.html
@@ -21,27 +21,12 @@
   </div>
  
   <div class="body">
-  <section class ="contactbody">
-Contact
+  <section class ="aboutme">
+Thank you for your interest ! 
 <hr>
-
-<form class= "form1" action="landing_page.html" type="post">
-  First name:<br>
-  <input type="text" name="Name" value="" class="formtype">
-  <br><br>
-  Last name:<br>
-  <input type="text" name="Email" value="" class="formemail">
-  <br><br>
-  Message:
-  <br>
-  <textarea rows="4" cols="50">
-
-</textarea>
-  <br><br>
-  <input type="submit" value="Submit" class ="formsubmit">
-</form> 
-
-
+<p class = "about-me-text">
+More exciting features coming soon !
+</p>
 </section>
 <section class = "links">
 <p>Connect with me</p>
@@ -58,9 +43,6 @@ Contact
 </section>
   
   </div>
-
-
-
 
 
 </body>
