--- a/contact.html
+++ b/contact.html
@@ -46,14 +46,14 @@ Contact
 <section class = "links">
 <p>Connect with me</p>
 <hr>
-<a href="https://www.linkedin.com/in/arumita-de-777218117">
-  <img src="assets\images\linkedin.jpg" alt="linkedin" style="width:42px;height:42px;border:0;" >
+<a id="linkedinimage" href="https://www.linkedin.com/in/arumita-de-777218117">
+  <img src="assets\images\linkedin.jpg" alt="linkedin" style="width:42px;height:42px;border:0;" >
+</a>  
+<a id="githubimage" href="https://github.com/ArumitaDe">
+  <img src="assets\images\github.jpg" alt="github" style="width:42px;height:42px;border:0;">
 </a> 
-<a href="https://github.com/ArumitaDe">
-  <img src="assets\images\github.jpg" alt="github" style="width:42px;height:42px;border:0;">
-</a> 
-<a href="http://meta.stackoverflow.com/users/7437618/arumita-dey">
-  <img src="assets\images\stackoverflow.jpg" alt="stackoverflow" style="width:42px;height:42px;border:0;">
+<a id="stackimage" href="http://meta.stackoverflow.com/users/7437618/arumita-dey">
+  <img src="assets\images\stackoverflow.jpg" alt="stackoverflow" style="width:42px;height:42px;border:0;">
 </a> 
 </section>
   
