--- a/portfolio.html
+++ b/portfolio.html
@@ -26,25 +26,25 @@ Portfolio
 <hr>
 <p class = "about-me-text">
 <a href="landing_page_2.html">
-  <img src="assets\images\icon1.jpg" alt="game1" style="width:150px;height:150px;border:0;" >
+  <img id="linkedinimage" src="assets\images\icon1.jpg" alt="game1" style="width:150px;height:150px;border:0;" >
 </a> 
 <a href="landing_page_2.html">
-  <img src="assets\images\icon2.jpg" alt="game2" style="width:150px;height:150px;border:0;">
+  <img id="linkedinimage" src="assets\images\icon2.jpg" alt="game2" style="width:150px;height:150px;border:0;">
 </a> 
 
 <a href="landing_page_2.html">
-  <img src="assets\images\icon3.jpg" alt="game3" style="width:150px;height:150px;border:0;">
+  <img id="linkedinimage" src="assets\images\icon3.jpg" alt="game3" style="width:150px;height:150px;border:0;">
 </a> 
 <br> <br> <br>
 <a href="landing_page_2.html">
-  <img src="assets\images\icon4.jpg" alt="game4" style="width:150px;height:150px;border:0;" >
+  <img id="linkedinimage" src="assets\images\icon4.jpg" alt="game4" style="width:150px;height:150px;border:0;" >
 </a> 
 
 <a href="landing_page_2.html">
-  <img src="assets\images\icon5.jpg" alt="game5" style="width:150px;height:150px;border:0;">
+  <img id="linkedinimage" src="assets\images\icon5.jpg" alt="game5" style="width:150px;height:150px;border:0;">
 </a> 
 <a href="landing_page_2.html">
-  <img src="assets\images\icon6.jpg" alt="game6" style="width:150px;height:150px;border:0;">
+  <img id="linkedinimage" src="assets\images\icon6.jpg" alt="game6" style="width:150px;height:150px;border:0;">
 </a> 
 
 
@@ -53,13 +53,13 @@ Portfolio
 <section class = "links">
 <p>Connect with me</p>
 <hr>
-<a href="https://www.linkedin.com/in/arumita-de-777218117">
+<a id="linkedinimage" href="https://www.linkedin.com/in/arumita-de-777218117">
   <img src="assets\images\linkedin.jpg" alt="linkedin" style="width:42px;height:42px;border:0;" >
-</a> 
-<a href="https://github.com/ArumitaDe">
+</a>  
+<a id="githubimage" href="https://github.com/ArumitaDe">
   <img src="assets\images\github.jpg" alt="github" style="width:42px;height:42px;border:0;">
 </a> 
-<a href="http://meta.stackoverflow.com/users/7437618/arumita-dey">
+<a id="stackimage" href="http://meta.stackoverflow.com/users/7437618/arumita-dey">
   <img src="assets\images\stackoverflow.jpg" alt="stackoverflow" style="width:42px;height:42px;border:0;">
 </a> 
 </section>
