Adding image and hover

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" type="text/css" href="assets\css\style.css">
 </head>
 <body>
+
+
 <div class="header">
  <h1>Arumita</h1>
   <ul>
@@ -26,10 +28,10 @@ Contact
 <hr>
 
 <form class= "form1" action="landing_page.html" type="post">
-  First name:<br>
+  Name:<br>
   <input type="text" name="Name" value="" class="formtype">
   <br><br>
-  Last name:<br>
+  Email:<br>
   <input type="text" name="Email" value="" class="formemail">
   <br><br>
   Message:
@@ -58,7 +60,6 @@ Contact
 </section>
   
   </div>
-
 
 
 
