--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 About Me
 <hr>
 <p class = "about-me-text">
-I am just awesome. I am just awesome. I am just awesome. I am just awesome. I am just awesome. I am just awesome.
+<img class = "aru" src="assets\images\aru.jpg" alt="Arumita De" height="150" width="150"> 
+I am enthusiastic, hardworking, and on my way to putting my best skills to the world of software development.  My gift to the world will be pleasing, professional, and efficient front-ends! I am enthusiastic, hardworking, and on my way to putting my best skills to the world of software development.  My gift to the world will be pleasing, professional, and efficient front-ends!
 </p>
 </section>
 <section class = "links">
