--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html  style="font-family:sans-serif;">
 <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Index</title>
 
 
@@ -61,8 +62,11 @@ Contact
   
   </div>
 
-
-
+<div >
+    <p class="footer"><br><br> copyright@2017 </p>
+    
+    </div>
+ 
 
 </body>
 </html>
