--- a/landing_page.html
+++ b/landing_page.html
@@ -43,7 +43,11 @@ Thank you for your information. I will get back to you soon !
 </section>
   
   </div>
-
+<div >
+    <p class="footer"><br><br> copyright@2017 </p>
+    
+    </div>
+ 
 
 </body>
 </html>
