--- a/landing_page_2.html
+++ b/landing_page_2.html
@@ -43,7 +43,11 @@ More exciting features coming soon !
 </section>
   
   </div>
-
+<div >
+    <p class="footer"><br><br> copyright@2017 </p>
+    
+    </div>
+ 
 
 </body>
 </html>
