--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html  style="font-family:sans-serif;">
 <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Index</title>
 
 
@@ -35,19 +36,7 @@ Portfolio
 <a href="landing_page_2.html">
   <img id="linkedinimage" src="assets\images\icon3.jpg" alt="game3" style="width:150px;height:150px;border:0;">
 </a> 
-<br> <br> <br>
-<a href="landing_page_2.html">
-  <img id="linkedinimage" src="assets\images\icon4.jpg" alt="game4" style="width:150px;height:150px;border:0;" >
-</a> 
-
-<a href="landing_page_2.html">
-  <img id="linkedinimage" src="assets\images\icon5.jpg" alt="game5" style="width:150px;height:150px;border:0;">
-</a> 
-<a href="landing_page_2.html">
-  <img id="linkedinimage" src="assets\images\icon6.jpg" alt="game6" style="width:150px;height:150px;border:0;">
-</a> 
-
-
+<br> 
 </p>
 </section>
 <section class = "links">
@@ -67,6 +56,11 @@ Portfolio
   </div>
 
 
+<div >
+    <p class="footer"><br><br> copyright@2017 </p>
+    
+    </div>
+ 
 
 
 
